--- a/pages/p6/926305.md
+++ b/pages/p6/926305.md
@@ -1,4 +1,4 @@
-### 打仗我捐三个月工资 那你还是打游戏吧(图)
+### 北宋皇帝亲自出6道题 难倒无数才子(组图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="战争" src="https://img3.secretchina.com/pic/2020/10-5/p2789132a341378147-ss.jpg" style="height:337px; width:600px"/>
+  <img alt="宋徽宗绘《唐十八学士》局部" src="https://img2.secretchina.com/pic/2019/6-25/p2454151a458442205-ss.jpg"/>
   <br>
-   2020年9月14日，川普总统和加州国民卫队以及他们的家人合影（图片来源：California Army National Guard）
+   宋徽宗是画家，是诗人，是书法家。图为宋徽宗绘《唐十八学士》局部。（图片来源：国立故宫博物院）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,162 +21,54 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看
-  <span href="https://www.secretchina.com" target="_blank">
-   中国
-  </span>
-  2020年10月5日讯】01
+  对于
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/宋徽宗" target="_blank">
+    宋徽宗
+   </span>
+  </strong>
+  ，他作为
+  <strong>
+   皇帝
+  </strong>
+  丢了江山，并非明君所为，这是他的失败。而如果作为一个普通人，他又是那么的迷人。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  经常在网上看到这样的言论：打xx我捐三个月
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/工资" target="_blank">
-    工资
-   </span>
-  </strong>
-  。
- </p>
- <p>
-  如果打仗只需要花三个月工资，确实很便宜，大多数人三个月的工资还不够买一平米房子呢。遗憾的是，面对真正的
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/战争" target="_blank">
-    战争
-   </span>
-  </strong>
-  ，这点钱是远远不够的。我上小学正赶上自卫反击战。老师会在课堂上给我们读报纸，告诉我们各种胜利捷报。有一天，我问老师一发炮弹要多少钱，同学们捐点钱给解放军叔叔买炮弹打敌人吧。
- </p>
- <p>
-  老师的回答出乎我们意料：一个炮弹的价格，大概是一个农民全家一年的生活费。
- </p>
- <p>
-  抢占某个山头的战斗，打了三天炮弹，相当于我们全县所有人一年的生活费。
- </p>
- <p>
-  <span href="https://zh.wikipedia.org/wiki/%E9%87%91%E9%97%A8%E7%82%AE%E6%88%98" target="_blank">
-   823炮战
+  我们都知道，除却君王，他是画家，是诗人，是书法家，是运动员，甚至是一个完美的情人，父辈打下来的江山正值盛世，国泰民安，他倒也简单天真，顺势把全部的心思用在了自己热爱的事情上，
+  <span href="https://www.secretchina.com/news/gb/tag/赵佶" target="_blank">
+   赵佶
   </span>
-  ，厦门几千门大炮轰炸金门，一发炮弹的价格，6寸炮弹是125美元，8寸炮弹是250美元。一个月炮轰下来，总开支大约相当于当时厦门所有房子的总价格。或者说，相当于把整个厦门所有的房子都扔过去砸金门了。
+  过的日子应该是所有艺术家梦想中的生活。那个时代，是洋溢着墨香和浓浓的文艺范儿的。
  </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
  <p>
-  那些更大的战争，只会更费钱。苏联卫国战争中，1945年4月16日，苏军四万门大炮同时进攻，一天发射炮弹190万颗。这笔钱，相当于一千万中国农民一年的生活费——这只是那一天打战的开支。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  抗美援朝中，美军投放的弹药总数高达500万吨，光弹药开支就超过全中国人民几年的生活费。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  二战期间日本有一种大型炮弹，460mm炮弹，一发炮弹的价格是4000日元。当时一个底层日本工人的月薪是5元。他要60多年的工资才能换一枚炮弹。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  02
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  或许你觉得科技发达了，生产力提高了，炮弹不那么贵了，或许打战的负担不那么重了。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  但是如今的武器也升级了。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  某些国家武器价格或许是机密，但是
-  <span href="https://www.secretchina.com/news/gb/tag/美国" target="_blank">
-   美国
+  宋徽宗最大的举措之一便是担任了“翰林图画院”院长，放着
+  <span href="https://www.secretchina.com/news/gb/tag/皇帝" target="_blank">
+   皇帝
   </span>
-  的武器价格是公开的，网上可以查到。
+  不当，兢兢业业地当起美术教授，编写教材，亲自授课，培养美术人才。
+ </p>
+ <p>
+  为了把最优秀的人才吸收到画院，徽宗建立考试制度，正式纳入科举考试之中，称“绘画试”。分佛道、人物、山水、鸟兽、花竹、屋木六科，摘古人诗句作为考题，要求考生画出诗句的意境，构思巧妙，不落俗套，做到笔意俱全。
+ </p>
+ <p>
+  不仅如此，宋徽宗还亲自出考题，亲自主考，亲自批卷，专业素质、创新意识考查样样不落下，综合素质过硬才能被录取进入画院。
+ </p>
+ <p>
+  <strong>
+   考题一：野渡无人舟自横
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -191,7 +83,7 @@
   </div>
  </center>
  <p>
-  杰达姆炸弹，当年炸过中国大使馆，三万美元。
+  此题取自唐朝诗人韦应物的《滁州西涧》。应试者大多画一空舟系于涧边，或者画一鹭鸶立于船上，或者画一鸟落在船杆……
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -206,7 +98,7 @@
   </div>
  </center>
  <p>
-  战斧巡航导弹，159万美元。
+  受到赵佶赏识的却是这样一幅画面，一个卧于船头的船夫，寂寞失落，百无聊赖。作者意在说明此水无人过渡，连摆渡之人也无聊，打起瞌睡来。既突出无乘客，又突出无人“渡”，紧扣诗句。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -221,7 +113,9 @@
   </div>
  </center>
  <p>
-  m1主战坦克，900万美元。
+  <strong>
+   考题二：踏花归去马蹄香
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -236,7 +130,7 @@
   </div>
  </center>
  <p>
-  阿帕奇直升机，2000万美元。
+  这个题目也是独具匠心的。如何表现“踏花归来马蹄香”中的“香”？
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -251,7 +145,7 @@
   </div>
  </center>
  <p>
-  b2轰炸机，21亿美元。按照今日金价，大约是30吨黄金。这飞机若是起飞，每小时的开支是16万美元，相当于三线城市的一套房子。
+  考生们抓耳挠腮，煞费苦心：“香”是抽象的，只能用鼻子闻到，不能用眼睛看到，怎么画出来？
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -266,7 +160,7 @@
   </div>
  </center>
  <p>
-  布什号航空母舰，62亿美元。养航母三十年的开支，大约是800亿美元。
+  有的画家绞尽了脑汁，在“踏花”二字上下功夫，画面上画了许许多多的花瓣儿，一个人骑着马在花瓣儿上行走，表现出游春的意思；有的画家煞费苦心在“马”字上下功夫，画面上的主体是一位跃马扬鞭的少年，在黄昏疾速归来；有的画家运思独苦，在“蹄”字上下功夫，在画面上画了一只大大的马蹄子，特别醒目。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -281,7 +175,7 @@
   </div>
  </center>
  <p>
-  伊拉克战争，美军以压倒式的战斗力轻松取胜。这场战争中美军花费是近万亿美元。有人计算过，这笔钱若是换成一百元一张的人民币，五秒钟烧一张，你烧一万年也烧不完。
+  赵佶看了，都很不满意。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -296,7 +190,7 @@
   </div>
  </center>
  <p>
-  美国人的武器昂贵，中国式的武器也不便宜。
+  只有一位画家独具匠心，他不是单纯着眼于诗句中的个别词，而是在全面体会诗句含义的基础上着重表现诗句末的“香”字。他的画面是：在一个夏天的落日近黄昏的时刻，一个游玩了一天的官人骑着马回归乡里，马儿疾驰，马蹄高举，几只蝴蝶追逐着马蹄蹁跹飞舞。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -311,7 +205,7 @@
   </div>
  </center>
  <p>
-  中国的J11或su30飞机，每小时训练成本大约是40万元人民币。培养一个成熟飞行员需要至少1000小时。一个战斗团队飞行员每年训练飞行180小时，一年就是五千万。
+  这位考生当然这脱颖而出，以榜首的位置入选画院。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -326,7 +220,9 @@
   </div>
  </center>
  <p>
-  几年前有人计算过，培养一名初级三代战斗机飞行员的成本，大约是二千多万，相当于当年的75公斤黄金，被称为“黄金等身”。
+  <strong>
+   考题三：竹锁桥边卖酒家
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -341,7 +237,7 @@
   </div>
  </center>
  <p>
-  高水平飞行员的培养费会超过一亿。你觉得几百公斤黄金的价格培养一个飞行员是否值得？
+  这是画院的著名试题之一。众多考生皆重于酒家，以小溪流水、野渡小桥、竹林清风等藉以衬托，皆不中赵佶之意。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -356,7 +252,7 @@
   </div>
  </center>
  <p>
-  看到战斗机，你应该这样想：天上飞过来的是几千斤的黄金，驾驶这堆黄金的驾驶员也是几百斤黄金做的。
+  唯有一名叫李唐的画家，独辟蹊径，画了一泓溪水，小桥横卧，桥边则是一片竹林，唯有那郁郁葱葱的翠竹中，挂着一幅迎风招展的酒帘。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -371,7 +267,7 @@
   </div>
  </center>
  <p>
-  03
+  赵佶看后大悦，认为酒家藏在竹林中正符合“锁”字的意境，亲自圈点为第一名。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -386,7 +282,9 @@
   </div>
  </center>
  <p>
-  战争靠人多是没用的，要打赢战争，主要是靠科技和金钱。如果某个国家想用常规战争的办法抗衡中国和美国这样的超级强国，它就必须跟中国和美国一样有钱。
+  <strong>
+   考题四：深山藏古寺
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -401,7 +299,7 @@
   </div>
  </center>
  <p>
-  有些小国家并不会奢望对付中美，但是要面对周边的许多虎视眈眈的国家。比如中东的以色列和东南亚的新加坡。
+  这个题目要画好并不容易，画中的古寺要“藏”起来，又要让人觉得它是存在的。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -416,7 +314,7 @@
   </div>
  </center>
  <p>
-  大多数中国人说起新加坡，都是不屑一顾，觉得这个还没有上海浦东大的小国家根本不会有军事力量。但是实际上新加坡是东南亚不可忽视的军事强国，它的军费高于马来西亚，甚至高于菲律宾和印尼这样的人口上亿的国家。
+  有的考生在山腰画座古庙，半遮半露，总算有“藏”的意思……
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -431,7 +329,7 @@
   </div>
  </center>
  <p>
-  新加坡每个男人都要服兵役，退役后还要每年去军队训练二周，一直到45岁。
+  有的在丛林深处画座古庙，有的只画出庙的一角或一段残垣断壁……
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -446,7 +344,7 @@
   </div>
  </center>
  <p>
-  新加坡有自己的军工厂。士兵们用的是专为本国情况设计的SAR-21无托步枪。
+  主考官一连看了很多幅，都不满意，有一幅画深深吸引了他，他再仔细端详了一番，便连连点头称赞，说：“好，好，这才是‘魁选’之作呀！”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -461,7 +359,7 @@
   </div>
  </center>
  <p>
-  新加坡军工企业技术动力公司是东南亚最大的军火公司，可自主生产全套的陆军装备，其生产的豹2SG坦克、Terrax装甲车、履带步兵战车、155mm自行榴弹炮等装备在国际市场上竞争力极强，有的甚至还出口英美。欧盟的许多坦克，都来自新加坡。美军的战斗机和军舰维修，很多是在新加坡完成的。
+  那幅画好在哪里呢？那位高明的画家，根本没有画庙，画的是崇山峻岭之中一股清泉飞流而下，泉边有个老态龙钟的和尚，正一瓢一瓢地舀水。就这么一个挑水的和尚，就把“深山藏古寺”的题目表现得透彻极了，把“藏”字表现出来了。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -476,7 +374,7 @@
   </div>
  </center>
  <p>
-  新加坡的空军，是一支拥有相当数量三代机、预警机、武装直升机、运输机及教练机的完整体系的现代化空军。
+  和尚挑水，当然是用来烧茶煮饭，洗衣浆衫，这就叫人想到附近一定有庙；和尚年迈，还得自己来挑水，可以想像到那庙是座破败的古庙了。庙一定是在深山中，画面上看不见，这就把“藏”字表现出来了。这幅画比起那些画庙的一角或庙的一段墙垣的，更切合“深山藏古寺”的题意。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -491,7 +389,9 @@
   </div>
  </center>
  <p>
-  新加坡的人均军费开支是3400美元。如果一家三代六口人，每年承担军费大约是二万美元，或十几万人民币。
+  <strong>
+   考题五：嫩绿枝头红一点
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -506,7 +406,7 @@
   </div>
  </center>
  <p>
-  如果每个中国人也承担新加坡这样高的军费，一家六口每年贡献14万人民币给国家，你觉得有几个家庭承受得起？
+  “嫩绿枝头红一点”，应该还算好表达，难就难在题目还有后半句“恼人春色不须多”。如何表现这种春色不须多的境界呢？
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -525,7 +425,7 @@
   </ins>
  </center>
  <p>
-  可能有8亿中国人就得把全家所有的收入都拿给国家当军费，自己一辈子一分钱都没有。
+  中规中矩的答案就是这样的，直接在绿叶上画了朵红花，或是一丛绿叶中露出朵红花。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -540,7 +440,7 @@
   </div>
  </center>
  <p>
-  这只是和平年代新加坡的军事开支，不是战争。一旦发生战争，钱就没法算了。
+  但有位画家画了绿树中里一个亭阁，一位仕女正倚栏而立，她娇艳的樱桃小口在一片绿的画面中显得明艳照人。便有一动人情思的感觉，把“一点红”的含意作了灵巧恰当的表现。不用说，这位画家凭借这一巧思脱颖而出。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -555,7 +455,9 @@
   </div>
  </center>
  <p>
-  04
+  <strong>
+   考题六：蝴蝶梦中家万里
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -570,7 +472,7 @@
   </div>
  </center>
  <p>
-  若是真的打仗，你需要为战争捐多少钱呢？
+  此题取自“蝴蝶梦中家万里，杜鹃枝上月三更”，寓意很深。诗句出现“蝴蝶”、“子规（杜鹃）”、“树枝”、“明月”，表达了游子孤眠异乡的空虚寥落心情。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -585,7 +487,7 @@
   </div>
  </center>
  <p>
-  我们以二战时代的中国为例。与苏联的卫国战争比，中日战争其实并不激烈，士兵阵亡比例和军费开支只是苏德战争的一个零头。但是即便这样的战争，也彻底摧垮了中国经济，只有在相对和平的满洲国才稍微经济好一点。几年战争打下来，满洲国和中国其他地区的人均GDP差距高达二十倍。
+  众考生皆不中意，唯一被选中的是王道亨的试卷。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -600,7 +502,7 @@
   </div>
  </center>
  <p>
-  为了打战，各种逼捐。中日战争到后期，正面战场的每个国军士兵只能分到几颗子弹，每天的食物只有九两大米。那时候一斤是十六两，九两大米就是281克，个个饿得骨瘦如柴。
+  王道亨所绘的是苏武牧羊图，画面上苏武假寐，在异国的冰天雪地中，正在打瞌睡，睡梦中一定是千万里远的家乡：林木扶疏，双蝶追逐其间，上立子规，月正当空，木影在地。犹闻啼声。王道亨较好地把握了题目的含义，一举夺魁。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -615,7 +517,7 @@
   </div>
  </center>
  <p>
-  抗战结束了，接下来却是更激烈的三年内战。为了做垂死挣扎，国民党政府只能飞速印钞票。1948年8月21日，法币崩溃。从抗战开始至法币崩溃，法币发行量增长了47万倍，同一时期上海的物价上涨了492.7万倍。金圆券代替法币后，通胀比法币更快。
+  以上，宋徽宗的考试方式叫“诗题取士”，这让画家们深刻领悟到了“没文化真可怕”这个道理。他们不能再死描死背地画画，而要去读书，从中锻练诗意的想像空间，以更高的层次理解绘画。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -630,7 +532,25 @@
   </div>
  </center>
  <p>
-  做个这样的直观比较：如果马云把所有的财产变现为存款，在抗战时期前存在银行，到1948年可以买一辆汽车，到1949年年底这点存款就不够加一次油的钱，只能洗一次车。这样的战争，马云得为国家捐多少钱？
+  但是，你别以为考进来就完事儿了，对于考进来的画家，还得按身份分为“士流”和“杂流”，不断培训不断考核，品德智力等全面发展，再分职称。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p style="text-align:center">
+  <img alt="宋徽宗《蜡梅山禽图》" src="https://img2.secretchina.com/pic/2019/6-25/p2454171a579455601-ss.jpg"/>
+  <br>
+   宋徽宗《蜡梅山禽图》是迄今最早一张，“诗、书、画”都是自己原创的作品。（图片来源：国立故宫博物院）
+  </br>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -645,7 +565,11 @@
   </div>
  </center>
  <p>
-  战争就是这样，你所有的钱都会在战争中烟消云散。
+  比如宋徽宗就曾经要求画院那帮画师，让他们连孔雀要飞起来的时候，先抬左脚还是右脚，这个都要搞清楚。在这样的格物精神下，出现很多写实的画。比如，宋徽宗的《山禽腊梅图》，这张画是迄今最早一张，“诗、书、画”都是自己原创的作品。直接影响了后来一说起传统
+  <span href="https://www.secretchina.com/news/gb/tag/中国画" target="_blank">
+   中国画
+  </span>
+  就必须是“诗、书、画”的三个经典元素。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -660,7 +584,11 @@
   </div>
  </center>
  <p>
-  05
+  到了公元1126年，金兵攻破汴京，将徽、钦二帝押送北方，汴京被洗劫一空，
+  <span href="https://www.secretchina.com/news/gb/tag/北宋" target="_blank">
+   北宋
+  </span>
+  灭亡，史称“靖康之耻”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -675,7 +603,7 @@
   </div>
  </center>
  <p>
-  比金钱更耗钱的或许是房子。如今的中国人，大多数财产都在房子里。
+  被囚禁期间，宋徽宗受尽精神折磨，写下了许多晦恨、哀怨，凄凉的诗句，“家山回首三千里，目断山南无雁飞”，这一句算是真正体会王道亨所绘苏武牧羊图的真正境界了。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -690,7 +618,7 @@
   </div>
  </center>
  <p>
-  房子有多脆弱？如果B2轰炸机来轰炸上海，那是几十吨的黄金在天上飞，一会儿就可以炸掉地上价值几百吨黄金的房子。
+  于个人，他堪称艺术家，对北宋及中国绘画发展，功不可没，谁也不能否认他在艺术的惊人成就与才华。于国家，昏庸无能，作为一国之主，身负重任，却不务正业。人们总是向往一种完全不同的人生，大风大浪羡慕安宁平静，平淡无奇追求矫情曲折，但事实总逃不过一句“无可奈何”，其实就是逃脱不了神安排的命运，李煜是，赵佶亦是如此。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -704,67 +632,6 @@
    </center>
   </div>
  </center>
- <p>
-  这只是扔常规炸弹。若是扔核武器，一个价值十吨黄金的原子弹扔过来，一秒钟就毁掉一个价值一万吨黄金的大都市。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  还有一些不能用钱来衡量的损失。比如说一个中产阶级的孩子，从小到大寄托了全家的热切希望，砸了无数钱给他上各种培训班，为他买学区房，进好学校，还出国留学，最后这样一个眼看着可以挣高薪的孩子被一颗子弹打在脑门死了，或者被炸翻的房子压扁了。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  你所有投在房产和孩子身上的钱，在战争中看不到丝毫回报，都会烟消云散。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  你以为打仗只需要捐三个月工资，那是在网吧打游戏买装备吧。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- (文章仅代表作者个人立场和观点)
  <p style="margin-bottom:12px;">
   <hr style="border-top: 1px dashed  ;" width="100%"/>
   <br/>
@@ -783,7 +650,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -815,13 +682,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/948207.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/948207.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/948207.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/05/948207.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/926305.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/926305.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/926305.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/04/926305.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p4/948207.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p6/926305.md' width='0px' height='0px'/>
